update invite fonts

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,10 @@
     href="https://fonts.googleapis.com/css2?family=Delius+Unicase:wght@400;700&family=Nerko+One&family=Pacifico&family=Rock+Salt&family=Rubik+Spray+Paint&family=Rubik+Vinyl&family=Sriracha&family=Suez+One&family=Abril+Fatface&family=Roboto+Slab&family=Sacramento&display=swap"
     rel="stylesheet">
 
+  <link href="https://fonts.cdnfonts.com/css/galantis" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/beauty-marsella" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/mustard-smile" rel="stylesheet">
+
 
   <title>Rosemary's Birthday Party!</title>
 </head>
